# MARA_ROS1

./: README.md
cable_demo/: CMakeLists.txt  package.xml
cable_demo/src/: IK_moveit.cpp
hrim_actuator_gripper_msgs/: CMakeLists.txt  package.xml
hrim_actuator_gripper_srvs/: CMakeLists.txt  package.xml
mara2_moveit_config/: CMakeLists.txt  package.xml
mara2_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  mara.srdf  ompl_planning.yaml  stomp_planning.yaml
mara2_moveit_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  mara_moveit_controller_manager.launch.xml  mara_moveit_planning_execution.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
mara_bringup/: CMakeLists.txt
mara_bringup/config/: motors.yaml  two_motors.yaml
mara_bringup/launch/: mara_bringup.launch  mara_bringup_camera.launch  mara_bringup_moveit.launch  mara_bringup_moveit_actions.launch  module_bringup.launch
mara_bringup/scripts/: follow_joints_individual_trajectory.py  follow_joints_module.py  follow_joints_trajectory_actions.py
mara_description/: package.xml
mara_description/launch/: test_mara_model.launch
mara_description/urdf/: mara.urdf.xacro  mara_gazebo.urdf.xacro  mara_robot_camera.urdf  mara_robot_camera_top.urdf  mara_robot_camera_top.urdf.xacro  mara_robot_gripper_140.urdf.xacro  mara_robot_gripper_140_no_table.urdf.xacro  mara_robot_gripper_85.urdf.xacro  mara_robot_gripper_hande.urdf.xacro  mara_robot_gripper_ur_j.urdf.xacro  mara_robot_nogripper.urdf.xacro  module.urdf.xacro  rs_d435.urdf.xacro  two_mara_robots.urdf.xacro
mara_moveit_config/config/: kinematics.yaml  mara.srdf
mara_moveit_config/launch/: demo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch
robotiq_140_gripper_description/: CMakeLists.txt  package.xml
robotiq_140_gripper_description/urdf/: robotiq_140.urdf.xacro  robotiq_140_hros_support.urdf.xacro  robotiq_140_world.urdf.xacro
robotiq_85_gripper_description/: CMakeLists.txt  package.xml
robotiq_85_gripper_description/urdf/: robotiq_85.urdf.xacro  robotiq_85_hros_support.urdf.xacro  robotiq_85_world.urdf.xacro
robotiq_arg2f_model_visualization/urdf/: robotiq_arg2f_140_model_macro.xacro
robotiq_hande_gripper_description/: CMakeLists.txt  package.xml
robotiq_hande_gripper_description/urdf/: robotiq_hande.urdf.xacro  robotiq_hande_world.urdf.xacro
