<?xml version="1.0"?>
<package format="2">
  <name>mara2_moveit_config</name>
  <version>1.0.0</version>
  <description>mara Moveit</description>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <author email="yue@erlerobotics.com">Yue Erro</author>
  <maintainer email="yue@erlerobotics.com">Yue Erro</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
